# navigation-learning

./: .gitignore  README.md
RSCAR/: CMakeLists.txt  count.sh  rcnn_data.py  readme.md
RSCAR/common/: CMakeLists.txt  algorithm_factory.h  get_absolute_path.h  image_util.cpp  image_util.h  io.h  main_interface.h  mean_filter.h  rs.cpp  rs.h  string_util.h  util.h
RSCAR/config/: road_car.proto
RSCAR/modules/: CMakeLists.txt
RSCAR/modules/altest/: CMakeLists.txt  altest.cpp  altest.h  altest_algorithm_base.h  altest_select_algorithm.h
RSCAR/modules/altest/config/: altest.prototxt
RSCAR/modules/altest/lkopticalflow/: CMakeLists.txt  lkopticalflow.cpp  lkopticalflow.h
RSCAR/modules/altest/proto/: altest.proto
RSCAR/modules/altest/separation/: CMakeLists.txt  separation.cpp  separation.h
RSCAR/modules/altest/static_stabling/: CMakeLists.txt  static_stabling.cpp  static_stabling.h
RSCAR/modules/detect/: CMakeLists.txt  detect.cpp  detect.h  detect_algorithm_base.h  select_algorithm.h
RSCAR/modules/detect/BFSeparation/: BFSeparation.cpp  BFSeparation.h  CMakeLists.txt
RSCAR/modules/detect/Yolo/: CMakeLists.txt  YoloDetection.cpp  YoloDetection.h
RSCAR/modules/detect/config/: detect.prototxt
RSCAR/modules/detect/proto/: detect.proto
RSCAR/modules/filter_tracker/: CMakeLists.txt  filter_tracker.cpp  filter_tracker.h
RSCAR/modules/filter_tracker/config/: filter_tracker.prototxt
RSCAR/modules/filter_tracker/proto/: filter_tracker.proto
RSCAR/modules/information/: CMakeLists.txt  information.cpp  information.h
RSCAR/modules/information/config/: information.prototxt
RSCAR/modules/information/proto/: information.proto
RSCAR/modules/mannul_mark/: CMakeLists.txt  mannul_mark.cpp  mannul_mark.h  mannul_test.cpp  mannul_test.h
RSCAR/modules/mannul_mark/config/: mannul_mark.prototxt
RSCAR/modules/mannul_mark/proto/: mannul_mark.proto
RSCAR/modules/preprocess/: CMakeLists.txt  preprocess.cpp  preprocess.h
RSCAR/modules/preprocess/config/: preprocess.prototxt
RSCAR/modules/preprocess/proto/: preprocess.proto
RSCAR/modules/preprocess/src/: preprocess.cpp  preprocess.h
RSCAR/modules/relocate/: CMakeLists.txt  draw_area.cpp  draw_area.h  relocate.cpp  relocate.h
RSCAR/modules/relocate/config/: PointsSet.prototxt  PointsSetCar.prototxt  PointsSetPerson.prototxt  relocate.prototxt
RSCAR/modules/relocate/proto/: relocate.proto
RSCAR/modules/replay/: CMakeLists.txt  cvt.py  replay.cpp  replay.h
RSCAR/modules/replay/config/: init_frame.prototxt  replay.prototxt  w_angle.prototxt  w_velocity.prototxt
RSCAR/modules/replay/proto/: replay.proto
RSCAR/modules/stabling/: CMakeLists.txt  stable_data.cpp  stable_data.h  stabling.cpp  stabling.h
RSCAR/modules/stabling/config/: stabling.prototxt
RSCAR/modules/stabling/proto/: stabling.proto
RSCAR/modules/track/: CMakeLists.txt  base_track_algorithm.h  select_track_algorithm.h  track.cpp  track.h
RSCAR/modules/track/KFilter/: CMakeLists.txt  KFilter.cpp  KFilter.h  KalmanFilter.cpp  KalmanFilter.h
RSCAR/modules/track/config/: track.prototxt
RSCAR/modules/track/proto/: track.proto
RSCAR/modules/tracker/: CMakeLists.txt
RSCAR/modules/tracker/proto/: tracker.proto
RSCAR/modules/tracker/src/: tracker.cpp  tracker.h
RSCAR/modules/type_cvt/: CMakeLists.txt  type_cvt.cpp  type_cvt.h
RSCAR/modules/type_cvt/config/: type_cvt.prototxt
RSCAR/modules/type_cvt/proto/: type_cvt.proto
car_filter/: CMakeLists.txt
car_filter/src/: car_filter.cpp  car_filter.h  filter_algorithm.cpp  main.cpp
car_tracker/: CMakeLists.txt
car_tracker/kalman_filter/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h
car_tracker/src/: car_tracker.cpp  car_tracker.h  main.cpp
cpp_map/: CMakeLists.txt  package.xml
cpp_map/src/: CarClient.py  CarControl.cpp  CarControl.h  main.cpp  main.h
kalman_filter/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  main.cpp  main.h
kalman_filter/opencv_test/: CMakeLists.txt  main.cpp  main.h
kalman_filter/test/: CMakeLists.txt  main.cpp  main.h
road_simulation/: CMakeLists.txt
road_simulation/config/: road_car.proto
road_simulation/src/: CMakeLists.txt
road_simulation/src/car_filter/: CMakeLists.txt
road_simulation/src/car_filter/include/: car_filter.h  filter_algorithm.h
road_simulation/src/car_filter/src/: car_filter.cpp  filter_algorithm.cpp  main.cpp
road_simulation/src/car_tracker/: CMakeLists.txt
road_simulation/src/car_tracker/include/: KalmanFilter.h
road_simulation/src/car_tracker/src/: KalmanFilter.cpp  car_tracker.cpp  main.cpp
road_simulation/src/draw_area/: CMakeLists.txt
road_simulation/src/draw_area/include/: draw_area.h
road_simulation/src/draw_area/src/: draw_area.cpp  main.cpp
road_simulation/src/information/: CMakeLists.txt
road_simulation/src/information/include/: information.h
road_simulation/src/information/src/: information.cpp  main.cpp
road_simulation/src/line_finder/: CMakeLists.txt
road_simulation/src/line_finder/include/: line_finder.h  position_convert.h
road_simulation/src/line_finder/src/: line_finder.cpp  (+2 more)
road_simulation/src/relocation/: CMakeLists.txt
road_simulation/src/stabling/: CMakeLists.txt
road_simulation/src/undisort/: CMakeLists.txt
road_simulation/src/yolo/: CMakeLists.txt
robot_control/: CMakeLists.txt  package.xml
robot_control/action/: GlobalPlanner.action  SetTarget.action
robot_control/config/: base_local_planner_params.yaml  costmap_common_params.yaml  path.config  pos_pid.config  yaw_pid.config
robot_control/launch/: navigation_stage.launch
robot_control/proto/: pid.proto  pos.proto
robot_control/rviz/: robot.rviz
robot_control/src/: CarServer.py  car_server.py
robot_control/src/client/: client.cpp  client.h
robot_control/src/global_planner/: global_planner.cpp  global_planner.h
robot_control/src/local_planner/: local_planner.cpp  local_planner.h
robot_control/src/server/: server.cpp  server.h
robot_control/src/util/: PID.cpp  PID.h  a_star.cpp  a_star.h  common_io.h
yolo/: CMakeLists.txt
yolo/src/: YOLO_DARKNET.cpp  YOLO_DARKNET.h  b.sh  main.cpp
(+52 files in other folders)
