cmake_minimum_required(VERSION 3.0)
project(car_filter)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Release)
add_definitions(-DPATH="${CMAKE_CURRENT_SOURCE_DIR}")
find_package(OpenCV REQUIRED)
include_directories(/usr/include)
set(SRC src/main.cpp src/car_filter.cpp src/filter_algorithm.cpp src/filter_algorithm.h)
add_executable(main ${SRC})
target_link_libraries(main ${OpenCV_LIBS})
