cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
project(kf)
add_definitions(-DDIMENSION=4)
set(kf_src KalmanFilter.cpp)
set(src main.cpp ${kf_src})
find_package(eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})
message(STATUS "eigen is ${EIGEN3_INCLUDE_DIR}")
add_library(${PROJECT_NAME} SHARED ${kf_src})
add_executable(main ${src})
