cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
project(kf)
add_definitions(-DDIMENSION=2)
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
add_library(kf SHARED KalmanFilter.cpp)
add_subdirectory(test)
add_subdirectory(opencv_test)
