project(draw_area)
include_directories(include ../car_filter/include)
set(SRC src/main.cpp src/draw_area.cpp)
message(STATUS "src is ${SRC}")
add_executable(${PROJECT_NAME} ${SRC})
add_dependencies(${PROJECT_NAME} car_filter_lib)
add_dependencies(${PROJECT_NAME} road_proto)
target_link_libraries(${PROJECT_NAME} road_proto ${PROTOBUF_LIBRARIES} ${OpenCV_LIBS} car_filter_lib)
